--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -15,3 +15,17 @@
 // h3: 54px;
 // h4: 34px;
 // h5: 14px;
+
+
+.skip-link {
+    position: absolute;
+    left: -1000px;
+    top: 5px;
+    z-index: 999;
+    background: white;
+    color: black;
+  }
+  
+  .skip-link:focus {
+    left: 0;
+  }
