--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -1,3 +1,7 @@
+@import './partials/setup';
+@import './partials/typography';
+@import './partials/variables'
+
 // COLOURS:
 // primary text (blue): #084b6d;
 // secondary (light blue): #f4fcff;
@@ -6,8 +10,6 @@
 // quinary (orange): #ffd698;
 // pastel blue: #d3f0f9 
 // white: #fff; 
-
-
 
 // HEADINGS:
 // h1: 28px;
@@ -25,7 +27,6 @@
     background: white;
     color: black;
   }
-  
   .skip-link:focus {
     left: 0;
   }
