--- a/styles/styles.css
+++ b/styles/styles.css
@@ -635,3 +635,29 @@ footer .footerNav nav a:hover {
 footer .footerNav nav a:focus {
   color: white;
 }
+
+.footerNav {
+  width: 40%;
+}
+.footerNav nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.footerNav nav ul {
+  width: 33%;
+}
+.footerNav nav a {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 0.8rem;
+  line-height: 1.5rem;
+}
+.footerNav nav a:hover {
+  color: white;
+}
+.footerNav nav a:focus {
+  color: white;
+}
