--- a/styles/sass/partials/_base.scss
+++ b/styles/sass/partials/_base.scss
@@ -1,98 +1,97 @@
-/* _baseStyles.scss */
-
 .wrapper {
-    max-width: 1260px;
-    width: 90%;
-    margin: 0 auto;
+	max-width: 1260px;
+	width: 90%;
+	margin: 0 auto;
 }
 
 /* _baseStyles.scss */
 
 button {
-    color: $primary;
-    background-color: transparent;
-    padding: 18px 36px;
-    border: 2px solid $primary;
-    font-size: 0.8rem;
-    font-weight: bold;
-    line-height: 1.2rem;
-    text-align: center;
-    cursor: pointer;
-    transition: 0.3s;
+	color: $primary;
+	background-color: transparent;
+	padding: 18px 36px;
+	border: 2px solid $primary;
+	font-size: 0.8rem;
+	font-weight: bold;
+	line-height: 1.2rem;
+	text-align: center;
+	cursor: pointer;
+	transition: 0.3s;
 
-    &:hover {
-        background-color: $primary;
-        color: $solidWhite;
-    }
+	&:hover {
+		background-color: $primary;
+		color: $solidWhite;
+	}
 
-    &:focus {
-        background-color: $primary;
-        color: $solidWhite;
-    }
+	&:focus {
+		background-color: $primary;
+		color: $solidWhite;
+	}
 
-    &.secondary {
-        background-color: transparent;
-        border-color: $solidWhite;
-        color: $solidWhite;
-        padding: 8px 12px;
+	&.secondary {
+		background-color: transparent;
+		border-color: $solidWhite;
+		color: $solidWhite;
+		padding: 8px 12px;
 
-        &:hover {
-            background-color: $solidWhite;
-            color: $primary;
-        }
+		&:hover {
+			background-color: $solidWhite;
+			color: $primary;
+		}
 
-        &:focus {
-            background-color: $solidWhite;
-            color: $primary;
-        }
-    }
+		&:focus {
+			background-color: $solidWhite;
+			color: $primary;
+		}
+	}
 
-    &.solid {
-        color: $solidWhite;
-        background-color: $primary;
+	&.solid {
+		color: $solidWhite;
+		background-color: $primary;
 
-        &:hover {
-            color: $primary;
-            background-color: $solidWhite;
-        }
-    }
+		&:hover {
+			color: $primary;
+			background-color: $solidWhite;
+		}
+	}
 
-    /* style the button in the main nav menu to look just like an icon */
-    &.menuIcon {
-        display: inherit;
-        padding: 0;
-        border: none;
+	/* style the button in the main nav menu to look just like an icon */
+	&.menuIcon {
+		display: inherit;
+		padding: 0;
+		border: none;
 
-        &:hover {
-            background-color: transparent;
-        }
+		&:hover {
+			background-color: transparent;
+		}
 
-        &:focus {
-            background-color: transparent;
-        }
-    }
+		&:focus {
+			background-color: transparent;
+		}
+	}
 }
 
 a {
-    &.button {
-        color: $primary;
-        background-color: transparent;
-        padding: 18px 36px;
-        border: 2px solid $primary;
-        font-size: 0.8rem;
-        font-weight: bold;
-        line-height: 1.2rem;
-        text-align: center;
-        transition: 0.3s;
+	display: inline-block;
+	&.button {
+		color: $primary;
+		background-color: transparent;
+		padding: 18px 36px;
+		border: 2px solid $primary;
+		font-size: 0.8rem;
+		font-weight: bold;
+		line-height: 1.2rem;
+		text-align: center;
+		transition: 0.3s;
 
-        &:hover {
-            background-color: $primary;
-            color: $solidWhite;
-        }
+		&:hover {
+			background-color: $primary;
+			color: $solidWhite;
+		}
 
-        &:focus {
-            background-color: $primary;
-            color: $solidWhite;
-        }
-    }
+		&:focus {
+			background-color: $primary;
+			color: $solidWhite;
+		}
+	}
 }
