--- a/styles/sass/partials/_typography.scss
+++ b/styles/sass/partials/_typography.scss
@@ -1,48 +1,44 @@
-/* _typography.scss */
 
-// COLOURS:
-// primary text (blue): #084b6d;
-// secondary (light blue): #f4fcff;
-// tertiary (green): #f8fbf3; 
-// quaternary (pink): #fff5f5; 
-// quinary (orange): #ffd698;
-// pastel blue: #d3f0f9 
-// white: #fff; 
 
 /* import Jakarta Sans font */
 @font-face {
-    font-family: "Jakarta Sans";
-    src: url('../fonts/PlusJakarta_Sans-2.5/webfonts/PlusJakartaSans-Regular.woff'),
-        url('../fonts/PlusJakarta_Sans-2.5/static/PlusJakartaSans-Regular.ttf'),
-        url('../fonts/PlusJakarta_Sans-2.5/webfonts/PlusJakartaSans-Regular.woff2');
-    font-weight: normal;
+	font-family: "Jakarta Sans";
+	src: url('../fonts/PlusJakarta_Sans-2.5/webfonts/PlusJakartaSans-Regular.woff'),
+		url('../fonts/PlusJakarta_Sans-2.5/static/PlusJakartaSans-Regular.ttf'),
+		url('../fonts/PlusJakarta_Sans-2.5/webfonts/PlusJakartaSans-Regular.woff2');
+	font-weight: normal;
 }
 
 /* import Jakarta Sans font in bold */
 @font-face {
-    font-family: "Jakarta Sans";
-    src: url('../fonts/PlusJakarta_Sans-2.5/webfonts/PlusJakartaSans-Bold.woff'),
-        url(../fonts/PlusJakarta_Sans-2.5/webfonts/PlusJakartaSans-Bold.woff2),
-        url(../fonts/PlusJakarta_Sans-2.5/static/PlusJakartaSans-Bold.ttf);
-    font-weight: bold;
+	font-family: "Jakarta Sans";
+	src: url('../fonts/PlusJakarta_Sans-2.5/webfonts/PlusJakartaSans-Bold.woff'),
+		url(../fonts/PlusJakarta_Sans-2.5/webfonts/PlusJakartaSans-Bold.woff2),
+		url(../fonts/PlusJakarta_Sans-2.5/static/PlusJakartaSans-Bold.ttf);
+	font-weight: bold;
 }
 
 /* import Young Serif font */
 @font-face {
-    font-family: "Young Serif";
-    src: url('../fonts/youngserif/YoungSerif-Regular.otf');
+	font-family: "Young Serif";
+	src: url('../fonts/youngserif/YoungSerif-Regular.otf');
 }
 
-/* _typography.scss */
+// HEADINGS:
+// h1: 28px;
+// h2: 40px;
+// h3: 54px;
+// h4: 34px;
+// h5: 14px;
 
 html {
-    font-size: 125%;
+	font-size: 125%;
 }
 
 body {
-    font-family: $bodyFont;
-    font-size: 1rem;
-    color: $primary;
+	font-family: $bodyFont;
+	font-size: 1rem;
+	color: $primary;
 }
 
 h1,
@@ -50,70 +46,70 @@ h2,
 h3,
 h4,
 blockquote {
-    font-family: $headingFont;
-    font-weight: normal;
-    color: $primary;
-    margin: 0;
+	font-family: $headingFont;
+	font-weight: normal;
+	color: $primary;
+	margin: 0;
 }
 
 h1 {
-    font-size: 1.4rem;
+	font-size: 1.4rem;
 }
 
 h2 {
-    font-size: 2rem;
-    line-height: 2.4rem;
-    margin-bottom: 18px;
+	font-size: 2rem;
+	line-height: 2.4rem;
+	margin-bottom: 18px;
 }
 
 h3 {
-    font-size: 2.7rem;
-    line-height: 3rem;
-    margin-bottom: 24px;
+	font-size: 2.7rem;
+	line-height: 3rem;
+	margin-bottom: 24px;
 }
 
 h4 {
-    font-size: 1.7rem;
-    line-height: 2rem;
-    margin-bottom: 18px;
+	font-size: 1.7rem;
+	line-height: 2rem;
+	margin-bottom: 18px;
 }
 
 h5 {
-    font-size: 0.7rem;
-    font-weight: bold;
-    line-height: 1.2rem;
-    letter-spacing: 0.1rem;
-    text-transform: uppercase;
-    margin: 0 0 24px 0;
+	font-size: 0.7rem;
+	font-weight: bold;
+	line-height: 1.2rem;
+	letter-spacing: 0.1rem;
+	text-transform: uppercase;
+	margin: 0 0 24px 0;
 }
 
 p {
-    line-height: 1.5rem;
-    margin: 0 0 30px 0;
+	line-height: 1.5rem;
+	margin: 0 0 30px 0;
 
-    &.smallCopy {
-        font-size: 0.6rem;
-        line-height: 1.2rem;
-        font-weight: bold;
-        margin: 0;
-    }
+	&.smallCopy {
+		font-size: 0.6rem;
+		line-height: 1.2rem;
+		font-weight: bold;
+		margin: 0;
+	}
 }
 
 ul,
 li,
 a,
 input {
-    padding: 0;
-    margin: 0;
+	padding: 0;
+	margin: 0;
 }
 
 ul {
-    list-style: none;
+	list-style: none;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
-    cursor: pointer;
-    transition: 0.3s;
+	text-decoration: none;
+	color: inherit;
+	cursor: pointer;
+	transition: 0.3s;
 }
