--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -1,10 +1,11 @@
-@import './partials/variables';
-@import './partials/setup';
-@import './partials/typography';
-@import './partials/typography';
-@import './partials/base';
-@import './partials/nav';
-@import './partials/footer';
-@import './partials/header';
-@import './partials/categories';
+@import "./partials/variables";
+@import "./partials/setup";
+@import "./partials/typography";
+@import "./partials/base";
+@import "./partials/nav";
+@import "./partials/header";
+@import "./partials/categories";
+@import "./partials/productsPage";
+@import "./partials/footer";
+@import "./partials/mediaQuerys";
 
